--- a/personal-page/index.html
+++ b/personal-page/index.html
@@ -11,9 +11,14 @@
 	<body>
 		<div id="wrapper">
 			<div class="header">
+				<div class="name">
+					Lu W.
+					<button id="likePage" onclick="likeThePage()">Like 0</button>
+				</div>
+				
 				<div class="nav">
 				<a class="index" href="#" target="_blank">Main Page</a>
-				<a href="https://www.youtube.com/watch?v=fCWdP_R09S4" target="_blank" >AWS</a>
+				<a href="http://127.0.0.1:8848/personal-page/aws_blog.html" target="_blank" >AWS</a>
 				<a href target="_blank" >Hadoop/Spark/Hive</a>
 				<a href="#" target="_blank" >Coding</a>
 				<a href="#" target="_blank" >Baking</a>
@@ -21,13 +26,13 @@
 				<a href="#" target="_blank" >Investing</a>
 				<a href="#" target="_blank" >Travel</a>	
 				</div>
-				<div class="name">
-					Lu W.
-				</div>
 			</div>
 			<div class="content">
+				<div id="pic_rotation">	
+					<img src="img/boxed-cakes.jpg"/>
+				</div>
 				Click to get more infomation on my focusing areas:
-				<a href="https://www.youtube.com/watch?v=fCWdP_R09S4" target="_blank" >AWS</a>
+				<a href="http://127.0.0.1:8848/personal-page/aws_blog.html" target="_blank" >AWS</a>
 				<a href target="_blank" >Hadoop/Spark/Hive</a>
 				<a href="#" target="_blank" >Coding</a>
 				<a href="#" target="_blank" >Baking</a>
@@ -39,3 +44,4 @@
 		</div>	
 	</body>
 </html>
+<script src="js/main.js"></script>
